--- a/iweather/iweather/AppDelegate/Main.storyboard
+++ b/iweather/iweather/AppDelegate/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qZo-H7-cgj">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,11 +17,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7FM-E2-rQt">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="zAc-Iq-m1Q"/>
@@ -56,37 +55,38 @@
                         <viewControllerLayoutGuide type="bottom" id="1lA-0T-NRR"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SV2-bl-9bT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qc7-mA-mAQ">
-                                <rect key="frame" x="0.0" y="698" width="414" height="1"/>
+                                <rect key="frame" x="0.0" y="629" width="375" height="1"/>
                                 <color key="backgroundColor" red="0.78937876220000003" green="0.58974033589999997" blue="0.54531586170000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="Smd-13-bDA"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="naa-ma-hVs">
-                                <rect key="frame" x="357" y="699" width="32" height="37"/>
+                                <rect key="frame" x="328" y="630" width="37" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="4aL-CS-LbR"/>
+                                    <constraint firstAttribute="height" constant="37" id="UrT-cN-j92"/>
+                                </constraints>
                                 <state key="normal" image="menu.png"/>
                                 <connections>
                                     <action selector="didMenu:" destination="gMe-hD-g2i" eventType="touchUpInside" id="uaZ-NT-tas"/>
                                 </connections>
                             </button>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Bsx-bP-3Cc">
-                                <rect key="frame" x="82.333333333333314" y="699" width="250" height="37"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="BqN-01-tjG"/>
-                                </constraints>
-                                <color key="pageIndicatorTintColor" red="0.95574671030044556" green="0.53269976377487183" blue="0.44882363080978394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="currentPageIndicatorTintColor" red="0.67095297570000001" green="0.37488561869999998" blue="0.31267654900000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="50" y="630" width="268" height="37"/>
+                                <color key="pageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="currentPageIndicatorTintColor" red="0.88873751300000003" green="0.074391752429999999" blue="0.094870127959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="changePage:" destination="gMe-hD-g2i" eventType="valueChanged" id="TKk-FG-4PC"/>
                                 </connections>
                             </pageControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zNs-rf-j7h">
-                                <rect key="frame" x="0.0" y="20" width="414" height="678"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="609"/>
+                                <color key="backgroundColor" red="0.53889065979999995" green="0.37561985850000001" blue="0.44788157940000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VoT-As-hi9">
                                     <size key="itemSize" width="327" height="485"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -99,22 +99,37 @@
                                     <outlet property="delegate" destination="gMe-hD-g2i" id="E1a-N7-s1x"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y5W-GA-QmO">
+                                <rect key="frame" x="10" y="633.5" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bAv-yU-0Xd"/>
+                                    <constraint firstAttribute="width" constant="30" id="wQr-u3-zRq"/>
+                                </constraints>
+                                <state key="normal" image="1234.png"/>
+                                <connections>
+                                    <action selector="didSelectToWeb:" destination="gMe-hD-g2i" eventType="touchUpInside" id="ZvD-Pr-QIV"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.53889065979999995" green="0.37561985850000001" blue="0.44788157940000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="qc7-mA-mAQ" secondAttribute="trailing" id="5qu-eS-kpB"/>
                             <constraint firstItem="qc7-mA-mAQ" firstAttribute="top" secondItem="zNs-rf-j7h" secondAttribute="bottom" id="K89-tF-2Tp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="naa-ma-hVs" secondAttribute="trailing" constant="5" id="WW1-2a-bDm"/>
-                            <constraint firstItem="Bsx-bP-3Cc" firstAttribute="top" secondItem="qc7-mA-mAQ" secondAttribute="bottom" id="c0s-9m-Upo"/>
+                            <constraint firstItem="y5W-GA-QmO" firstAttribute="top" secondItem="qc7-mA-mAQ" secondAttribute="bottom" constant="3.5" id="Nam-O2-nky"/>
+                            <constraint firstItem="Bsx-bP-3Cc" firstAttribute="leading" secondItem="y5W-GA-QmO" secondAttribute="trailing" constant="10" id="TQS-WW-A0g"/>
+                            <constraint firstItem="1lA-0T-NRR" firstAttribute="top" secondItem="naa-ma-hVs" secondAttribute="bottom" id="Yuh-Cz-kvN"/>
                             <constraint firstItem="zNs-rf-j7h" firstAttribute="leading" secondItem="SV2-bl-9bT" secondAttribute="leading" id="cNw-xt-dpe"/>
-                            <constraint firstItem="1lA-0T-NRR" firstAttribute="top" secondItem="naa-ma-hVs" secondAttribute="bottom" id="gdo-mx-q8Z"/>
+                            <constraint firstItem="Bsx-bP-3Cc" firstAttribute="top" secondItem="qc7-mA-mAQ" secondAttribute="bottom" id="cim-ct-k6w"/>
+                            <constraint firstItem="1lA-0T-NRR" firstAttribute="top" secondItem="Bsx-bP-3Cc" secondAttribute="bottom" id="dRd-QU-Rkz"/>
+                            <constraint firstItem="naa-ma-hVs" firstAttribute="top" secondItem="qc7-mA-mAQ" secondAttribute="bottom" id="hhX-wq-gL1"/>
                             <constraint firstAttribute="bottom" secondItem="qc7-mA-mAQ" secondAttribute="bottom" constant="37" id="jb9-So-IUN"/>
-                            <constraint firstItem="Bsx-bP-3Cc" firstAttribute="centerX" secondItem="SV2-bl-9bT" secondAttribute="centerX" id="moJ-Gh-Be1"/>
+                            <constraint firstItem="y5W-GA-QmO" firstAttribute="leading" secondItem="SV2-bl-9bT" secondAttribute="leading" constant="10" id="m19-5C-uYS"/>
                             <constraint firstAttribute="trailing" secondItem="zNs-rf-j7h" secondAttribute="trailing" id="qCV-C3-tAd"/>
                             <constraint firstItem="qc7-mA-mAQ" firstAttribute="leading" secondItem="SV2-bl-9bT" secondAttribute="leading" id="qbj-xE-TTF"/>
-                            <constraint firstItem="naa-ma-hVs" firstAttribute="top" secondItem="qc7-mA-mAQ" secondAttribute="bottom" id="uMf-y1-hLW"/>
+                            <constraint firstAttribute="trailing" secondItem="naa-ma-hVs" secondAttribute="trailing" constant="10" id="sFv-e5-21w"/>
+                            <constraint firstItem="naa-ma-hVs" firstAttribute="centerY" secondItem="y5W-GA-QmO" secondAttribute="centerY" id="uE1-vO-GEB"/>
                             <constraint firstItem="zNs-rf-j7h" firstAttribute="top" secondItem="Qjw-fP-isK" secondAttribute="bottom" id="v9D-wj-qbR"/>
-                            <constraint firstItem="1lA-0T-NRR" firstAttribute="top" secondItem="Bsx-bP-3Cc" secondAttribute="bottom" id="vnA-Kb-Iev"/>
+                            <constraint firstItem="naa-ma-hVs" firstAttribute="leading" secondItem="Bsx-bP-3Cc" secondAttribute="trailing" constant="10" id="zPD-Cv-8gO"/>
                         </constraints>
                     </view>
                     <connections>
@@ -124,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a3b-tM-UbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1070" y="-474"/>
+            <point key="canvasLocation" x="1068.75" y="-474.29577464788736"/>
         </scene>
         <!--SearchVC-->
         <scene sceneID="z7D-KF-ZoA">
@@ -135,27 +150,27 @@
                         <viewControllerLayoutGuide type="bottom" id="ol1-ch-uXo"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="goy-P0-PV5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yYW-mO-qng">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter city, zip code, or airport location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJ7-Mg-cEB">
-                                        <rect key="frame" x="0.0" y="20" width="414" height="20.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="20" width="375" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="FHG-KB-p1Q">
-                                        <rect key="frame" x="10" y="60" width="346" height="44"/>
+                                        <rect key="frame" x="10" y="60" width="307" height="44"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <connections>
                                             <outlet property="delegate" destination="WpB-ol-3tb" id="R41-bN-uwo"/>
                                         </connections>
                                     </searchBar>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukc-z2-O80">
-                                        <rect key="frame" x="356" y="60.666666666666671" width="48" height="44.000000000000014"/>
+                                        <rect key="frame" x="317" y="60.5" width="48" height="44"/>
                                         <state key="normal" title="Cancel">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -179,7 +194,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pyI-iC-TM8">
-                                <rect key="frame" x="0.0" y="120" width="414" height="616"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="WpB-ol-3tb" id="Lxg-Fq-mBM"/>
@@ -237,6 +252,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1234.png" width="54" height="53"/>
         <image name="menu.png" width="32" height="32"/>
     </resources>
 </document>
