--- a/iweather/iweather/MVC/CellDetail/MyHeader.xib
+++ b/iweather/iweather/MVC/CellDetail/MyHeader.xib
@@ -4,29 +4,45 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MyHeaderInSection" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="391" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="574" height="141"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ocy-dl-J3e">
-                    <rect key="frame" x="0.0" y="0.0" width="391" height="1"/>
+                    <rect key="frame" x="0.0" y="0.0" width="574" height="1"/>
                     <color key="backgroundColor" red="0.78937876224517822" green="0.5897403359413147" blue="0.54531586170196533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="2YZ-UK-jcI"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ho-iU-Hih">
-                    <rect key="frame" x="0.0" y="1" width="391" height="98"/>
-                    <color key="backgroundColor" red="0.12076002700000001" green="1" blue="0.11501029309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="0.0" y="1" width="574" height="139"/>
+                    <subviews>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="067-2B-tmU">
+                            <rect key="frame" x="0.0" y="0.0" width="574" height="139"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gv2-4I-Dh4">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="067-2B-tmU" secondAttribute="bottom" id="6YB-2c-13q"/>
+                        <constraint firstAttribute="trailing" secondItem="067-2B-tmU" secondAttribute="trailing" id="plL-hG-gRu"/>
+                        <constraint firstItem="067-2B-tmU" firstAttribute="top" secondItem="0ho-iU-Hih" secondAttribute="top" id="yE5-O0-gPr"/>
+                        <constraint firstItem="067-2B-tmU" firstAttribute="leading" secondItem="0ho-iU-Hih" secondAttribute="leading" id="z1q-f4-FTQ"/>
+                    </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p0u-6M-vOy">
-                    <rect key="frame" x="0.0" y="99" width="391" height="1"/>
+                    <rect key="frame" x="0.0" y="140" width="574" height="1"/>
                     <color key="backgroundColor" red="0.78937876220000003" green="0.58974033589999997" blue="0.54531586170000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="RJZ-mi-roi"/>
@@ -48,7 +64,22 @@
                 <constraint firstItem="0ho-iU-Hih" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="1" id="zUs-Oy-Ooj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="32.5" y="-195"/>
+            <connections>
+                <outlet property="myCollectionTempHour" destination="067-2B-tmU" id="sZ9-vU-7Ff"/>
+            </connections>
+            <point key="canvasLocation" x="-59" y="-543.5"/>
         </view>
+        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" id="hkb-xQ-NbJ">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V8N-Zk-nM6">
+                <size key="itemSize" width="50" height="50"/>
+                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+            </collectionViewFlowLayout>
+            <point key="canvasLocation" x="-37" y="-317"/>
+        </collectionView>
     </objects>
 </document>
