--- a/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
+++ b/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
@@ -5,20 +5,59 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="myCollectionTempHour" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="121"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="myCellTempHour" customModule="iweather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="71" height="132"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="121"/>
+                <rect key="frame" x="0.0" y="0.0" width="71" height="132"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86m-8u-CaV">
+                        <rect key="frame" x="0.0" y="0.0" width="71" height="44"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fru-oL-TS2">
+                        <rect key="frame" x="15.5" y="44" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="TTb-bc-4D1"/>
+                            <constraint firstAttribute="height" constant="40" id="Vvs-W8-Y4P"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNe-tZ-edQ">
+                        <rect key="frame" x="0.0" y="84" width="71" height="48"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
-            <size key="customSize" width="50" height="121"/>
-            <point key="canvasLocation" x="-178" y="87.5"/>
+            <constraints>
+                <constraint firstItem="BNe-tZ-edQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0YH-oR-qTw"/>
+                <constraint firstItem="fru-oL-TS2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="1w8-7i-rNF"/>
+                <constraint firstAttribute="bottom" secondItem="BNe-tZ-edQ" secondAttribute="bottom" id="HMW-Iv-XUS"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="1/3" id="Hfy-Z8-2YM"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QWA-4Z-2NE"/>
+                <constraint firstAttribute="trailing" secondItem="BNe-tZ-edQ" secondAttribute="trailing" id="bPz-Xd-FIh"/>
+                <constraint firstAttribute="trailing" secondItem="86m-8u-CaV" secondAttribute="trailing" id="buy-DV-Lhd"/>
+                <constraint firstItem="BNe-tZ-edQ" firstAttribute="top" secondItem="fru-oL-TS2" secondAttribute="bottom" id="gF7-78-R4q"/>
+                <constraint firstItem="fru-oL-TS2" firstAttribute="top" secondItem="86m-8u-CaV" secondAttribute="bottom" id="ouJ-0M-yc7"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vFU-qI-ip3"/>
+            </constraints>
+            <size key="customSize" width="71" height="132"/>
+            <connections>
+                <outlet property="img" destination="fru-oL-TS2" id="eWy-PE-GB1"/>
+                <outlet property="lblTemp" destination="BNe-tZ-edQ" id="zYT-D7-5kx"/>
+                <outlet property="lblTimer" destination="86m-8u-CaV" id="i0T-vg-btA"/>
+            </connections>
+            <point key="canvasLocation" x="-169.5" y="88"/>
         </collectionViewCell>
     </objects>
 </document>
