--- a/iweather/iweather/MVC/CellDetail/MyHeader.xib
+++ b/iweather/iweather/MVC/CellDetail/MyHeader.xib
@@ -24,8 +24,9 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ho-iU-Hih">
                     <rect key="frame" x="0.0" y="1" width="574" height="139"/>
                     <subviews>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="067-2B-tmU">
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="067-2B-tmU">
                             <rect key="frame" x="0.0" y="0.0" width="574" height="139"/>
+                            <color key="backgroundColor" red="0.53501206636428833" green="0.37560093402862549" blue="0.44794154167175293" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gv2-4I-Dh4">
                                 <size key="itemSize" width="50" height="50"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
