--- a/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
+++ b/iweather/iweather/MVC/CellDetail/myCellTempHour.xib
@@ -5,59 +5,63 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="myCellTempHour" customModule="iweather" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="71" height="132"/>
+            <rect key="frame" x="0.0" y="0.0" width="71" height="138"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="71" height="132"/>
+                <rect key="frame" x="0.0" y="0.0" width="71" height="138"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86m-8u-CaV">
-                        <rect key="frame" x="0.0" y="0.0" width="71" height="44"/>
+                        <rect key="frame" x="0.0" y="5" width="71" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="vqn-gF-MoV"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fru-oL-TS2">
-                        <rect key="frame" x="15.5" y="44" width="40" height="40"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fru-oL-TS2">
+                        <rect key="frame" x="23" y="56.5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="TTb-bc-4D1"/>
-                            <constraint firstAttribute="height" constant="40" id="Vvs-W8-Y4P"/>
+                            <constraint firstAttribute="width" constant="25" id="F05-FP-P6f"/>
+                            <constraint firstAttribute="height" constant="25" id="xAm-4T-ddn"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNe-tZ-edQ">
-                        <rect key="frame" x="0.0" y="84" width="71" height="48"/>
+                        <rect key="frame" x="0.0" y="112" width="71" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Si9-os-5zT"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" red="0.53501206639999999" green="0.375600934" blue="0.4479415417" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="BNe-tZ-edQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0YH-oR-qTw"/>
-                <constraint firstItem="fru-oL-TS2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="1w8-7i-rNF"/>
-                <constraint firstAttribute="bottom" secondItem="BNe-tZ-edQ" secondAttribute="bottom" id="HMW-Iv-XUS"/>
-                <constraint firstItem="86m-8u-CaV" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="1/3" id="Hfy-Z8-2YM"/>
-                <constraint firstItem="86m-8u-CaV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QWA-4Z-2NE"/>
-                <constraint firstAttribute="trailing" secondItem="BNe-tZ-edQ" secondAttribute="trailing" id="bPz-Xd-FIh"/>
-                <constraint firstAttribute="trailing" secondItem="86m-8u-CaV" secondAttribute="trailing" id="buy-DV-Lhd"/>
-                <constraint firstItem="BNe-tZ-edQ" firstAttribute="top" secondItem="fru-oL-TS2" secondAttribute="bottom" id="gF7-78-R4q"/>
-                <constraint firstItem="fru-oL-TS2" firstAttribute="top" secondItem="86m-8u-CaV" secondAttribute="bottom" id="ouJ-0M-yc7"/>
-                <constraint firstItem="86m-8u-CaV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vFU-qI-ip3"/>
+                <constraint firstItem="BNe-tZ-edQ" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="48l-ey-aCB"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" id="5zf-UT-zOY"/>
+                <constraint firstItem="fru-oL-TS2" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="9b8-RU-uAo"/>
+                <constraint firstAttribute="bottom" secondItem="BNe-tZ-edQ" secondAttribute="bottom" constant="5" id="MYe-lg-xjc"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="VNc-BI-nqp"/>
+                <constraint firstItem="fru-oL-TS2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="cue-cU-dfp"/>
+                <constraint firstItem="86m-8u-CaV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="qXh-a9-UOg"/>
+                <constraint firstItem="BNe-tZ-edQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uAg-5B-dFM"/>
             </constraints>
-            <size key="customSize" width="71" height="132"/>
+            <size key="customSize" width="71" height="138"/>
             <connections>
                 <outlet property="img" destination="fru-oL-TS2" id="eWy-PE-GB1"/>
                 <outlet property="lblTemp" destination="BNe-tZ-edQ" id="zYT-D7-5kx"/>
                 <outlet property="lblTimer" destination="86m-8u-CaV" id="i0T-vg-btA"/>
             </connections>
-            <point key="canvasLocation" x="-169.5" y="88"/>
+            <point key="canvasLocation" x="-169.5" y="85"/>
         </collectionViewCell>
     </objects>
 </document>
