--- a/iweather/iweather/MVC/CellDetail/MyCollectionViewCell.xib
+++ b/iweather/iweather/MVC/CellDetail/MyCollectionViewCell.xib
@@ -20,6 +20,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bc_background" translatesAutoresizingMaskIntoConstraints="NO" id="pOb-dT-whN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="234"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="48s-An-fT7">
                         <rect key="frame" x="0.0" y="20" width="320" height="200"/>
@@ -90,6 +91,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="dx9-1l-0u8" secondAttribute="trailing" id="1tY-iP-Eqg"/>
                             <constraint firstItem="UE4-rv-bYd" firstAttribute="top" secondItem="dx9-1l-0u8" secondAttribute="bottom" id="4Ls-QT-e1Z"/>
@@ -107,14 +109,14 @@
                             <constraint firstItem="jCS-NJ-Gfh" firstAttribute="leading" secondItem="48s-An-fT7" secondAttribute="leading" constant="20" id="yAB-Ry-Pal"/>
                         </constraints>
                     </view>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="01i-pM-KYa">
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="01i-pM-KYa">
                         <rect key="frame" x="0.0" y="220" width="320" height="348"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="sectionIndexBackgroundColor" red="0.53889065980911255" green="0.37561985850334167" blue="0.44788157939910889" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tableView>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.53889065980911255" green="0.37561985850334167" blue="0.44788157939910889" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="01i-pM-KYa" secondAttribute="bottom" id="3GV-h9-dF8"/>
                 <constraint firstAttribute="trailing" secondItem="pOb-dT-whN" secondAttribute="trailing" id="59O-4A-bMc"/>
