--- a/iweather/iweather/MVC/CellHome/MyCellWeather.xib
+++ b/iweather/iweather/MVC/CellHome/MyCellWeather.xib
@@ -53,34 +53,33 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0d-OS-OFM">
-                        <rect key="frame" x="312" y="5" width="35" height="35"/>
+                        <rect key="frame" x="322" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="35" id="cf1-Fn-dqM"/>
-                            <constraint firstAttribute="height" constant="35" id="lmM-up-UTv"/>
+                            <constraint firstAttribute="width" constant="25" id="cf1-Fn-dqM"/>
+                            <constraint firstAttribute="height" constant="25" id="lmM-up-UTv"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yHu-1a-a4Q">
-                        <rect key="frame" x="0.0" y="80" width="421" height="5"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zuF-AB-mF1">
+                        <rect key="frame" x="112" y="7" width="15" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="5" id="NRu-Ex-vVI"/>
+                            <constraint firstAttribute="width" constant="15" id="b10-Ky-u34"/>
+                            <constraint firstAttribute="height" constant="15" id="did-7g-fs9"/>
                         </constraints>
-                    </view>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" red="0.12076002700000001" green="1" blue="0.11501029309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="aMU-XC-JVB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4Ve-fE-Lhj"/>
-                    <constraint firstAttribute="trailing" secondItem="yHu-1a-a4Q" secondAttribute="trailing" id="4tp-kr-xOt"/>
                     <constraint firstItem="aMU-XC-JVB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5Y6-bQ-UmK"/>
-                    <constraint firstAttribute="bottom" secondItem="yHu-1a-a4Q" secondAttribute="bottom" id="7eF-3y-mxi"/>
-                    <constraint firstItem="12c-a1-BDI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="BEq-9M-s7L"/>
-                    <constraint firstItem="yHu-1a-a4Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="G4T-P0-DxD"/>
                     <constraint firstAttribute="trailing" secondItem="3Qv-yc-I2o" secondAttribute="trailing" constant="5" id="MBI-YC-Cl4"/>
                     <constraint firstAttribute="bottom" secondItem="v7E-g0-A0I" secondAttribute="bottom" id="RLS-ck-UiR"/>
+                    <constraint firstAttribute="bottom" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="10" id="SuQ-vl-fHG"/>
+                    <constraint firstItem="zuF-AB-mF1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="VOD-IQ-MFG"/>
+                    <constraint firstItem="zuF-AB-mF1" firstAttribute="leading" secondItem="kfw-vj-8Dm" secondAttribute="trailing" constant="10" id="VXu-jQ-ImI"/>
                     <constraint firstItem="a0d-OS-OFM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="XeC-dH-YLC"/>
                     <constraint firstItem="3Qv-yc-I2o" firstAttribute="leading" secondItem="v7E-g0-A0I" secondAttribute="trailing" id="XtI-ix-5KF"/>
                     <constraint firstItem="kfw-vj-8Dm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cpq-JQ-1h1"/>
-                    <constraint firstItem="yHu-1a-a4Q" firstAttribute="top" secondItem="12c-a1-BDI" secondAttribute="bottom" constant="5" id="i8E-VA-guy"/>
+                    <constraint firstItem="12c-a1-BDI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="f1K-oP-cVc"/>
                     <constraint firstItem="v7E-g0-A0I" firstAttribute="leading" secondItem="a0d-OS-OFM" secondAttribute="trailing" id="ipr-mt-PME"/>
                     <constraint firstItem="v7E-g0-A0I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="orZ-WC-ukY"/>
                     <constraint firstItem="3Qv-yc-I2o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="p8h-cq-UnK"/>
@@ -89,12 +88,13 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgCell" destination="a0d-OS-OFM" id="jmh-ff-0Jw"/>
+                <outlet property="imgCurrentLocation" destination="zuF-AB-mF1" id="7cP-Dh-ueT"/>
                 <outlet property="lblCity" destination="12c-a1-BDI" id="gzq-wH-Z1v"/>
                 <outlet property="lblCountry" destination="aMU-XC-JVB" id="9bU-uB-Vx1"/>
                 <outlet property="lblTemperature" destination="v7E-g0-A0I" id="kla-hT-PJz"/>
                 <outlet property="lblTime" destination="kfw-vj-8Dm" id="2oj-Zx-L88"/>
             </connections>
-            <point key="canvasLocation" x="-263.5" y="20"/>
+            <point key="canvasLocation" x="-372" y="-22"/>
         </tableViewCell>
     </objects>
 </document>
